...
object EditPhotosScreenTestTags {
  const val EDIT_SCAFFOLD = "editScaffold"
  const val EDIT_TOP_BAR = "editTopBar"
  const val EDIT_TOP_BAR_TITLE = "editTopBarTitle"
  const val EDIT_CANCEL_BUTTON = "editCancelButton"
  const val EDIT_BOTTOM_BAR = "editBottomBar"
  const val EDIT_REMOVE_BUTTON = "editRemoveButton"
  const val EDIT_PHOTO_GRID = "editPhotoGrid"
}

/**
 * A Screen corresponding to the edit mode of the feature that can add photos to the trip.
 *
 * @param photosViewModel the viewModel of the screen
...
