...
    <!-- PhotosScreen -->
    <string name="add_photos_title">Add photos</string>
    <string name="add_photos_button">Add photos</string>
    <string name="edit_top_bar_title">Select photos</string>
    <string name="cancel_edit">Cancel Edit</string>
    <string name="remove_button">Remove</string>
    <string name="error_loading">Could not load the photos</string>
    <string name="back_add_photos">Back to daily view screen</string>
    <string name="edit_button_description">Edit Mode</string>
    <string name="back_edit_photos">Back to daily view screen</string>
    <string name="image_picker">image/*</string>
    <string name="preview_profile_pic_title">New Profile Picture Preview</string>
    <string name="preview_profile_pic_confirm">Save new Profile Picture</string>
...
